# remorph-openenv-submission

./: .gitignore  Dockerfile  README.md  app.py  collab1_run1.ipynb  openenv.yaml  pip_constraints.txt  pyproject.toml  requirements-training.txt  requirements.txt
artifacts/submission/: benchmark_report.json  (+9 more)
docs/: frontend_data_contract.md  frontend_payload.schema.json  openenv_validation.md
notebooks/: remorph_mastercolab_production_rl.ipynb  remorph_mastercolab_staged_grpo.ipynb  remorph_openenv_colab.ipynb
remorph_openenv/: __init__.py  environment.py  live_local.py  models.py  policies.py  rewards.py  scenarios.py  training.py  trl_env.py
scripts/: HF_JOB_PASTE_COMMAND.txt  evaluate_submission.py  export_frontend_payload.py  generate_grpo_dataset.py  generate_splits.py  generate_submission_plots.py  hf_job_bootstrap_two_stage.sh  hf_run_quick_confidence.sh  hf_run_stage1_stage2.sh  hf_run_staged_grpo_full.sh  hf_run_staged_grpo_two_stage_persist.sh  hf_run_track_a_fast_persist.sh  inference.py  live_local_demo.py  plot_trl_grpo.py  plot_trl_master_compare.py  promote_long_run_outputs.py  smoke_grpo_trainer_deps.py  smoke_test_openenv.py  space_submission_checks.py  sqlite_artifact_bridge.py  start_live_local_server.py  train_submission.py  train_trl_grpo.py
server/: __init__.py  app.py
tests/: test_evaluate_submission.py  test_grpo_dataset_and_plots.py  test_live_local_mode.py  test_manifest_and_telemetry.py  test_multi_step_rollout.py  test_openenv_smoke.py  test_phase3_artifacts.py  test_scenario_registry.py  test_training_loop.py  test_trl_env.py
(+34 files in other folders)
